20000502-10:41 GMT+1 Victor Szakats <info@szelvesz.hu>

   * include/hbpcode.h
   * include/hbexprb.c
   * include/hbexprc.c
   * include/hbvm.h
   * source/compiler/hbpcode.c
   * source/compiler/hbfix.c
   * source/compiler/genc.c
   * source/vm/hvm.c
     + HB_P_SEND and HB_P_SENDSHORT pcodes added. At this moment they are 
       exactly the same as HB_P_FUNCTION[SHORT]. More work is needed to 
       optimize the stack usage for SEND/DO/FUNCTION.
     + hb_vmSend() function added.

     ! WARNING ! All sources must be recompiled.

20000502-01:30 GMT-8 Ron Pinkas <Ron@Profit-Master.com>

    * source/compiler/harbour.c
      * Correction compiler warning about piShifts in hb_compOptimizeJumps().

    * source/compiler/hbpcode.c
      * Correction compiler warning about pSym in hb_compStrongType().

20000502-09:30 GMT+1 Victor Szakats <info@szelvesz.hu>

   * utils/hbtest/rt_hvma.prg
     + Added some tests for the new compile-time generated double widths.

   * source/vm/hvm.c
     % Some optimization for hb_vmCalcDoubleWidth()

   * source/rdd/dbfcdx/dbfcdx1.c
     ! Fixed two -O2 GCC warnings.

2000-05-02 01:45 GMT-4 David G. Holm <dholm@jsd-llc.com>

  * include/hbapigt.h
    ! Changed INKEY_EXTENDED to INKEY_RAW to match inkey.ch.

  * source/vm/hvm.c
    ! Removed integer parameter test for 0 decimal places from division
      for 100% Clipper compatibility (Clipper only does this for compiler
      optimized integer division with an integer result).

  * source/vm/itemapi.c
    ! Default numeric to string conversion must never use more than 9
      decimal places in order to be Clipper compatible.

  * tests/teststr.c
    + Added code to make it easier to compare Harbour and Clipper results
      and to deal with the sometimes wrong results from HB_OSNEWLINE().

20000501-20:50 GMT-8 Ron Pinkas <Ron@Profit-Master.com>
   * source/compiler/harbour.l
     + Added "as char" and "as string" as acceptable alternative to "as character"